fix z-index;

--- a/Home/mystyle.css
+++ b/Home/mystyle.css
@@ -111,6 +111,7 @@ header {
     left: 50%;
     transform: translate(-50%,-50%);
     gap: 5vw;
+    z-index :2;
   }
 
   .box{
